# dc

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
examples/: runner_demo.rs
schemas/: README.md  devContainer.base.schema.json  md-to-html-links.lua
src/: ansi.rs  bytes.rs  cli.rs  complete.rs  config.rs  devcontainer.rs  docker.rs  lib.rs  main.rs  preflight.rs  run.rs  runner.rs  subscriber.rs  workspace.rs  worktree.rs
src/cli/: compose.rs  copy.rs  exec.rs  fwd.rs  kill.rs  list.rs  prune.rs  setup_shell.rs  show.rs  up.rs
src/devcontainer/: dc_options.rs  forward_port.rs  lifecycle_command.rs  spec.rs  unsupported.rs
src/run/: cmd.rs  docker_exec.rs  pty.rs
src/runner/: cmd.rs  docker_exec.rs  pty.rs
src/workspace/: git_status.rs  table.rs
